<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="2dp" app:layout_constraintTop_toBottomOf="@+id/basket_title"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:id="@+id/view"/>
    <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_title"
            style="@style/app_theme.text.small_title"
            android:textColor="@color/colorPrimary"
            android:id="@+id/status_title"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/status_title" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/status_title" android:id="@+id/view2"/>

    <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basket_title"
            style="@style/app_theme.text.small_title"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/basket_title"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.5"/>
    <com.google.android.material.textview.MaterialTextView
            android:textAlignment="textStart"
            android:drawableStart="@drawable/ic_tick"
            android:text="@string/status_processing"
            android:textColor="#000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/status_cb_processing"
            style="@style/app_theme.text.subtitle"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/view2" android:layout_marginTop="24dp"
            android:layoutDirection="rtl"
            android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>

    <com.google.android.material.textview.MaterialTextView
            android:textAlignment="textStart"
            android:drawableStart="@drawable/ic_untick"
            android:text="@string/status_sending"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/status_cb_sending"
            style="@style/app_theme.text.subtitle"
            android:textSize="20dp"
            android:layoutDirection="rtl"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/status_cb_processing"
            android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>

    <com.google.android.material.textview.MaterialTextView
            android:textAlignment="textStart"
            android:drawableRight="@drawable/ic_untick"
            android:text="@string/status_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/status_cb_done"
            style="@style/app_theme.text.subtitle"
            android:textSize="20dp"
            android:layoutDirection="rtl"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/status_cb_sending"
            android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>

    <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/app_theme.button"
            android:text="@string/status_code"
            android:id="@+id/status_code"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/status_cb_done"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/basket_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/view" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"/>

</androidx.constraintlayout.widget.ConstraintLayout>